--- a/ChangeLog
+++ b/ChangeLog
@@ -46,6 +46,9 @@ JavaScript was implemented for the responsiveness and effectiveness of the burge
 
 Part 3 JavaScript (To Be Continued)
 
+Changes that were made regarding Part 1's feedback
+A Changelog and Wireframes were added for the Website
+
 *Summary 
 Part 1 - 5 HTML pages were made containing information and interactive links 
 Part 2 - CSS was implemented for the theme and interactiveness of the websites for desktop, tablets, and mobile devices. 
